--- a/JetpackTest/app/src/main/res/layout/activity_main.xml
+++ b/JetpackTest/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,31 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/infoText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/plusOneBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+1"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="@+id/infoText"
+        app:layout_constraintStart_toStartOf="@+id/infoText"
+        app:layout_constraintTop_toBottomOf="@+id/infoText" />
+    <Button
+        android:id="@+id/clearBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="@+id/plusOneBtn"
+        app:layout_constraintStart_toStartOf="@+id/plusOneBtn"
+        app:layout_constraintTop_toBottomOf="@+id/plusOneBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
