--- a/MaterialTest/app/src/main/res/layout/activity_fruit.xml
+++ b/MaterialTest/app/src/main/res/layout/activity_fruit.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:contentScrim="@color/design_default_color_primary"
+            app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
