--- a/MaterialTest/app/src/main/res/values-night/colors.xml
+++ b/MaterialTest/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#303030</color>
+    <color name="colorPrimaryDark">#232323</color>
+    <color name="colorAccent">#008577</color>
 </resources>
