--- a/MaterialTest/app/src/main/res/values/styles.xml
+++ b/MaterialTest/app/src/main/res/values/styles.xml
@@ -2,4 +2,14 @@
 <resources>
 
 
+    <style name="FruitActivityTheme" parent="Theme.MaterialTest">
+
+        <item name="android:statusBarColor">#00000000</item>
+
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 </resources>
